<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoAutoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresa"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        />
    <EditText
        android:id="@+id/ingresarMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresaMarca"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <EditText
        android:id="@+id/ingresarModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresaModelo"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <EditText
        android:id="@+id/ingresarMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingresaMatricula"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <Spinner
        android:id="@+id/ingresarTipo"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:entries="@array/tipo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/favorito"
        />
    <CheckBox
        android:id="@+id/favorito"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Fecha"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />
    <Button
        android:id="@+id/btnIngresarAuto"
        android:layout_width="match_parent"
        android:textColor="#0e1117"
        android:backgroundTint="#e5bf4e"
        android:layout_height="wrap_content"
        android:text="@string/autoingresado"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

</LinearLayout>