<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoAutoActivity">

    <Button
        android:id="@+id/ver_lista"
        android:backgroundTint="#1280e2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_lista"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/boton_nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_nuevo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        />
    <Button
        android:id="@+id/boton_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ed2226"
        android:text="@string/boton_eliminarT"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        />

    <ImageView
        android:src="@drawable/Moto"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp" />
    <ImageView
        android:src="@drawable/Auto"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"/>

</RelativeLayout>